--- a/style.css
+++ b/style.css
@@ -17,6 +17,29 @@ body {
     width: 100vw;
 }
 
+@media (max-width: 720px) {
+    body {
+        flex-direction: column;
+        height: 100vh;
+        width: 100vw;
+        min-height: 100%;
+        min-width: 100%;
+    }
+    .form {
+        flex-direction: column;
+    }
+    .login-art {
+        width: 100vw;
+        min-width: 100%;
+    }
+    .login-section {
+        height: 100vh;
+        width: 100vw;
+        min-height: 100%;
+        min-width: 100%;
+    }
+}
+
 .login-art {
     display: flex;
     align-items: center;
@@ -36,7 +59,7 @@ body {
 }
 
 .logo img {
-    width: min(50%, 300px);
+    width: min(80%, 400px);
 }
 
 .login-section {
@@ -48,7 +71,6 @@ body {
 }
 
 .info-wrap {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -68,7 +90,6 @@ body {
 }
 
 .login-wrap {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -82,7 +103,6 @@ body {
 }
 
 .submit-wrap {
-    flex: 1;
     color: var(--text-clr);
     padding: var(--main-padding);
 }
@@ -155,12 +175,10 @@ body {
     border-bottom: 1px solid var(--text-clr);
 }
 
-input:not(:focus):not(:placeholder-shown):not(:optional):invalid {
-    border-bottom: 1px solid red;
-    background-color: rgba(255, 0, 0, 0.1);
+.input:not(:focus):not(:placeholder-shown):valid {
+    background-color: rgba(0, 255, 0, 0.1);
 }
 
-input:not(:focus):not(:placeholder-shown):valid {
-    border-bottom: 1px solid green;
-    background-color: rgba(0, 255, 0, 0.1);
+.input:not(:focus):not(:placeholder-shown):invalid {
+    background-color: rgba(255, 0, 0, 0.1);
 }
